# snip52-reference-impl

./: Cargo.toml  Makefile  NOTICE  README.md
schema/: execute_msg.json  query_msg.json
src/: channel.rs  contract.rs  crypto.rs  lib.rs  msg.rs  random.rs  rng.rs  signed_doc.rs  state.rs  vk.rs
