[package]
name = "snip52-reference-impl"
version = "0.1.0"
authors = ["darwinzer0"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
#cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.10-secret" }
#cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.10-secret" }
#cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
#cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }

cosmwasm-std = { version = "1.1.10", package = "secret-cosmwasm-std", features = ["random"] }
cosmwasm-storage = { version = "1.1.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", version = "0.9.0", features = ["crypto", "viewing-key"] }
#secret-toolkit-crypto = { git = "https://github.com/scrtlabs/secret-toolkit", branch = "0.9", features = ["hash", "rand", "ecc-secp256k1"] }

#cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
#cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
#secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", rev = "0129d78f15461016ef64b1953ec4b505aacdcc78", default-features = false, features = ["storage", "serialization", "utils", "permit", "viewing-key", "crypto"] }

schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
ripemd = { version = "0.1.3", default-features = false }
remain = "0.2.8"
bech32 = "0.9.1"
sha2 = "0.10.6"
hkdf = "0.12.3"
chacha20poly1305 = "0.10.1"
generic-array = "0.14.7"
base64 = "0.21.0"

# Uncomment these for some common extra tools
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
