[package]
name = "snip52-reference-impl"
version = "0.1.0"
authors = ["darwinzer0"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]

cosmwasm-std = { version = "1.1.10", package = "secret-cosmwasm-std", features = ["random"] }
cosmwasm-storage = { version = "1.1.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", version = "0.9.0", features = ["crypto", "viewing-key"] }
#secret-toolkit-crypto = { git = "https://github.com/scrtlabs/secret-toolkit", branch = "0.9", features = ["hash", "rand", "ecc-secp256k1"] }

schemars = { version = "0.8.11" }
serde = { version = "1.0" }
minicbor = "0.19.1"
minicbor-ser = "0.2.0"
thiserror = { version = "1.0" }
cosmwasm-schema = "1.0.0"
ripemd = { version = "0.1.3", default-features = false }
remain = "0.2.8"
getrandom = { version = "0.2", features = ["js"] }
bech32 = "0.9.1"
sha2 = "0.10.6"
hkdf = "0.12.3"
chacha20poly1305 = "0.10.1"
generic-array = "0.14.7"
base64 = "0.21.0"

#[[bin]]
#name = "schema"
#required-features = ["schema"]
