[package]
name = "snip52-reference-impl"
version = "0.1.0"
authors = ["darwinzer0"]
edition = "2021"
resolver = "2"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10"  }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10"  }
secret-toolkit-storage = "0.9.0"

#minicbor = "0.18.0"
minicbor-ser = "0.2.0"
thiserror = { version = "1.0" }
ripemd = { version = "0.1.3", default-features = false }
remain = "0.2.8"
#getrandom = { version = "0.2", features = ["js"] }
bech32 = "0.9.1"
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = "0.10.6"
hkdf = "0.12.3"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "rand_core"] }
generic-array = "0.14.7"
base64 = "0.21.0"
subtle = { version = "2.2.3", default-features = false }

# Used only for schema generation
cosmwasm-schema = { version = "1.1.0", optional = true }

[[bin]]
name = "schema"
required-features = ["schema"]

